--- a/app/src/main/res/menu/menu_clients_edit.xml
+++ b/app/src/main/res/menu/menu_clients_edit.xml
@@ -3,8 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/add_product"
+        android:id="@+id/confirm_client_edit"
         android:title="Añadir"
-        android:icon="@drawable/ic_baseline_arrow_forward_24"
+        android:icon="@drawable/ic_baseline_check_24"
         app:showAsAction="ifRoom"/>
 </menu>
