Personalización del brackground de los top clients.

--- a/app/src/main/res/layout/template_client.xml
+++ b/app/src/main/res/layout/template_client.xml
@@ -9,6 +9,10 @@
             type="Integer" />
 
         <variable
+            name="bgColor"
+            type="Integer" />
+
+        <variable
             name="clientViewModel"
             type="com.listen.to.miskiatty.viewmodel.ClientViewModel" />
     </data>
@@ -16,8 +20,8 @@
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        backgroundColor="@{bgColor}"
         android:orientation="horizontal">
-
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="0dp"
             android:layout_height="match_parent"
