El orders fragments funciona y se visualiza correctamente. Solo queda el cambiar el dialog fragment order details por un activity para que se pueda realizar el intent al hacer click en el item.
- Implementación del recycler view y su adapter, así como la comprobación del mismo.
- Se cambiaron tipos de datos en las variables del Order model-entity.
- Uso de convertidores para poder subir un orders en la base de datos ROOM.

--- a/app/src/main/res/layout/activity_order_add_activiy.xml
+++ b/app/src/main/res/layout/activity_order_add_activiy.xml
@@ -143,7 +143,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         tools:text="Productos"
-                        android:text="@{clientDetailsViewModel.client.name}"
+                        android:text="@{}"
                         android:textSize="20sp" />
 
                     <androidx.recyclerview.widget.RecyclerView
@@ -170,7 +170,7 @@
             android:src="@drawable/ic_baseline_add_24"
             android:text="Siguiente"
             android:contentDescription="Añadir Clientes"
-            android:onClick="@{() -> }" />
+            android:onClick="@{}" />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
