--- a/app/src/main/res/layout/dialog_fragment_order_details.xml
+++ b/app/src/main/res/layout/dialog_fragment_order_details.xml
@@ -79,7 +79,7 @@
                             android:layout_height="wrap_content"
                             tools:text="Estado"
                             android:textStyle="bold"
-                            android:text="@{clientDetailsViewModel.client.name}"
+                            android:text="@{}"
                             android:textSize="20sp" />
 
                     </androidx.appcompat.widget.LinearLayoutCompat>
