--- a/app/src/main/res/layout/fragment_orders.xml
+++ b/app/src/main/res/layout/fragment_orders.xml
@@ -4,6 +4,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
+        <variable
+            name="orderViewModel"
+            type="com.listen.to.miskiatty.viewmodel.OrderViewModel" />
 
     </data>
 
@@ -21,8 +24,9 @@
                 android:layout_height="match_parent"
                 android:paddingBottom="60dp"
                 app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                app:setAdapter="@{}" />
+                app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
+                app:spanCount="2"
+                app:setAdapter="@{orderViewModel.recyclerOrdersAdapter}" />
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/floating_action_button"
@@ -33,7 +37,7 @@
                 android:layout_marginBottom="72dp"
                 android:src="@drawable/ic_baseline_add_24"
                 android:contentDescription="Añadir Clientes"
-                android:onClick="@{() -> }" />
+                android:onClick="@{() -> orderViewModel.onClickAddOrder(context)}" />
 
         </androidx.coordinatorlayout.widget.CoordinatorLayout>
     </FrameLayout>
