Order Details funcional. Se visualizan los detalles al hacer click en el item del orders fragment.
Además:
- Se agregó un campo extra en el order model destinado a la cantidad de productos pedidos.

--- a/app/src/main/res/layout/template_order_products.xml
+++ b/app/src/main/res/layout/template_order_products.xml
@@ -4,7 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+        <variable
+            name="orderDetailsViewModel"
+            type="com.listen.to.miskiatty.viewmodel.OrderDetailsViewModel" />
 
+        <variable
+            name="position"
+            type="Integer" />
     </data>
 
     <androidx.appcompat.widget.LinearLayoutCompat
@@ -15,8 +21,8 @@
         <com.google.android.material.card.MaterialCardView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:backgroundTint="@color/colorPrimaryDark"
             android:layout_weight="2"
-
             android:layout_margin="4dp"
             app:cardCornerRadius="8dp"
             android:elevation="@dimen/cardview_default_elevation">
@@ -24,10 +30,11 @@
             <com.google.android.material.textview.MaterialTextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingHorizontal="16dp"
+                android:padding="8dp"
                 android:textStyle="bold"
                 tools:text="Producto"
-                android:text="@{}"
+                android:text="@{orderDetailsViewModel.getProductAt(position).name}"
+                android:textColor="@color/white"
                 android:textSize="20sp" />
 
         </com.google.android.material.card.MaterialCardView>
@@ -35,7 +42,8 @@
         <com.google.android.material.card.MaterialCardView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:backgroundTint="@color/colorPrimary"
+            android:layout_weight="2"
             android:layout_margin="4dp"
             app:cardCornerRadius="8dp"
             android:elevation="@dimen/cardview_default_elevation">
@@ -43,10 +51,11 @@
             <com.google.android.material.textview.MaterialTextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:paddingHorizontal="16dp"
+                android:padding="8dp"
                 tools:text="#"
-                android:text="@{}"
+                android:text="@{orderDetailsViewModel.order.productsQuantity.get(position).toString()}"
                 android:textSize="20sp"
+                android:textColor="@color/white"
                 android:textStyle="bold" />
 
         </com.google.android.material.card.MaterialCardView>
@@ -54,7 +63,8 @@
         <com.google.android.material.card.MaterialCardView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:backgroundTint="@color/colorAccent"
+            android:layout_weight="2"
             android:layout_margin="4dp"
             app:cardCornerRadius="8dp"
             android:elevation="@dimen/cardview_default_elevation">
@@ -62,10 +72,11 @@
             <com.google.android.material.textview.MaterialTextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingHorizontal="16dp"
+                android:padding="8dp"
                 android:textStyle="bold"
                 tools:text="S/"
-                android:text="@{}"
+                android:text='@{"S/" + (orderDetailsViewModel.getProductAt(position).price * orderDetailsViewModel.order.productsQuantity.get(position))}'
+                android:textColor="@color/white"
                 android:textSize="20sp" />
 
         </com.google.android.material.card.MaterialCardView>
