--- a/app/src/main/res/layout/activity_order_add.xml
+++ b/app/src/main/res/layout/activity_order_add.xml
@@ -4,14 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
+        <variable
+            name="orderAddViewModel"
+            type="com.listen.to.miskiatty.viewmodel.OrderAddViewModel" />
     </data>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context=".view.ui.orders.OrderAddActiviy">
+        tools:context=".view.ui.orders.OrderAddActivity">
 
         <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
@@ -49,26 +51,27 @@
                     android:orientation="vertical">
 
                     <com.google.android.material.textfield.TextInputLayout
-                        android:id="@+id/product"
+                        android:id="@+id/clientName"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="18dp"
                         app:boxStrokeColor="@color/white"
-                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                         android:hint="Cliente"
                         app:startIconDrawable="@drawable/ic_baseline_person_24"
-                        app:endIconMode="clear_text"
                         app:errorEnabled="true">
 
-                        <com.google.android.material.textfield.TextInputEditText
+                        <AutoCompleteTextView
+                            android:id="@+id/clientNameAutoComplete"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:inputType="text"
-                            android:lines="1" />
+                            android:inputType="none"
+                            android:lines="1"/>
 
                     </com.google.android.material.textfield.TextInputLayout>
 
                     <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/address"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="4dp"
@@ -83,6 +86,7 @@
                         <com.google.android.material.textfield.TextInputEditText
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:text="@={orderAddViewModel.address}"
                             android:inputType="text"
                             android:lines="1" />
 
@@ -97,6 +101,7 @@
                     android:orientation="vertical">
 
                     <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/deliveryDate"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -108,12 +113,14 @@
                         <com.google.android.material.textfield.TextInputEditText
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:inputType="text"
+                            android:text="@={orderAddViewModel.deliveryDate}"
+                            android:inputType="date|datetime"
                             android:lines="1" />
 
                     </com.google.android.material.textfield.TextInputLayout>
 
                     <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/state"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="4dp"
@@ -126,6 +133,7 @@
                         <com.google.android.material.textfield.TextInputEditText
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:text="@={orderAddViewModel.state}"
                             android:inputType="text"
                             android:lines="1" />
 
@@ -142,8 +150,7 @@
                     <com.google.android.material.textview.MaterialTextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        tools:text="Productos"
-                        android:text="@{}"
+                        android:text="Productos"
                         android:textSize="20sp" />
 
                     <androidx.recyclerview.widget.RecyclerView
@@ -151,8 +158,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />
-                    <!--app:setAdapter="@{}"-->
+                        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
+                        app:setAdapter="@{orderAddViewModel.recyclerOrdersProductsAdapter}"/>
 
                 </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -170,7 +177,7 @@
             android:src="@drawable/ic_baseline_add_24"
             android:text="Siguiente"
             android:contentDescription="Añadir Clientes"
-            android:onClick="@{}" />
+            android:onClick="@{() -> orderAddViewModel.onClickNextToSummary(context)}" />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
