--- a/app/src/main/res/layout/template_client.xml
+++ b/app/src/main/res/layout/template_client.xml
@@ -28,13 +28,22 @@
             android:layout_weight="1"
             android:orientation="vertical">
 
-            <androidx.appcompat.widget.AppCompatImageView
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_gravity="center"
-            tools:src="@drawable/ic_baseline_person_24"
-            srcUri="@{clientViewModel.getClientAt(position).image}"
-            android:scaleType="centerCrop" />
+            <androidx.cardview.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:elevation="@dimen/cardview_default_elevation"
+                android:layout_margin="2dp"
+                android:layout_gravity="center"
+                app:cardCornerRadius="80dp">
+
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center"
+                    tools:src="@drawable/ic_baseline_person_24"
+                    srcUri="@{clientViewModel.getClientAt(position).image}"
+                    android:scaleType="centerCrop" />
+            </androidx.cardview.widget.CardView>
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
