--- a/app/src/main/res/layout/fragment_clients.xml
+++ b/app/src/main/res/layout/fragment_clients.xml
@@ -13,6 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
@@ -22,46 +23,52 @@
                android:layout_width="match_parent"
                android:layout_height="match_parent">
 
-               <androidx.appcompat.widget.LinearLayoutCompat
+               <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+                   android:id="@+id/rvRefresh"
                    android:layout_width="match_parent"
-                   android:layout_height="match_parent"
-                   android:orientation="vertical">
+                   android:layout_height="match_parent">
 
-                   <com.google.android.material.textview.MaterialTextView
-                       android:layout_marginVertical="10dp"
-                       android:layout_marginHorizontal="16dp"
-                       android:layout_width="match_parent"
-                       android:layout_height="wrap_content"
-                       android:text="Top 3 Clientes"
-                       android:textAllCaps="true"
-                       android:textSize="18sp" />
-
-                   <androidx.recyclerview.widget.RecyclerView
-                       android:id="@+id/rv_topClients"
-                       android:layout_width="match_parent"
-                       android:layout_height="132dp"
-                       app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
-                       app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                       app:setAdapter="@{clientViewModel.recyclerTopClientsAdapter}"/>
-                   <com.google.android.material.textview.MaterialTextView
-                       android:layout_marginVertical="10dp"
-                       android:layout_marginHorizontal="16dp"
-                       android:layout_width="match_parent"
-                       android:layout_height="wrap_content"
-                       android:text="Clientes"
-                       android:textAllCaps="true"
-                       android:textSize="18sp" />
-
-                   <androidx.recyclerview.widget.RecyclerView
-                       android:id="@+id/rv_clients"
+                   <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
-                       android:paddingBottom="60dp"
-                       app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
-                       app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                       app:setAdapter="@{clientViewModel.recyclerClientsAdapter}"/>
+                       android:orientation="vertical">
 
-               </androidx.appcompat.widget.LinearLayoutCompat>
+                       <com.google.android.material.textview.MaterialTextView
+                           android:layout_marginVertical="10dp"
+                           android:layout_marginHorizontal="16dp"
+                           android:layout_width="match_parent"
+                           android:layout_height="wrap_content"
+                           android:text="Top 3 Clientes"
+                           android:textAllCaps="true"
+                           android:textSize="18sp" />
+
+                       <androidx.recyclerview.widget.RecyclerView
+                           android:id="@+id/rv_topClients"
+                           android:layout_width="match_parent"
+                           android:layout_height="132dp"
+                           app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
+                           app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                           app:setAdapter="@{clientViewModel.recyclerTopClientsAdapter}"/>
+                       <com.google.android.material.textview.MaterialTextView
+                           android:layout_marginVertical="10dp"
+                           android:layout_marginHorizontal="16dp"
+                           android:layout_width="match_parent"
+                           android:layout_height="wrap_content"
+                           android:text="Clientes"
+                           android:textAllCaps="true"
+                           android:textSize="18sp" />
+
+                       <androidx.recyclerview.widget.RecyclerView
+                           android:id="@+id/rv_clients"
+                           android:layout_width="match_parent"
+                           android:layout_height="match_parent"
+                           android:paddingBottom="60dp"
+                           app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
+                           app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                           app:setAdapter="@{clientViewModel.recyclerClientsAdapter}"/>
+
+                   </androidx.appcompat.widget.LinearLayoutCompat>
+               </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/floating_action_button"
