Mejora del addOrder.
- Despliegue de un dialog, para seleccionar fecha y hora.
- DropDownBox para los estados del pedido.

--- a/app/src/main/res/layout/template_order.xml
+++ b/app/src/main/res/layout/template_order.xml
@@ -46,7 +46,7 @@
                     tools:text="27/03/20"
                     android:maxLines="1"
                     android:gravity="center"
-                    android:text="@{orderViewModel.getOrderAt(position).deliveryDate.toString()}"
+                    android:text="@{orderViewModel.getDate(position)}"
                     android:textSize="18sp" />
 
                 <com.google.android.material.textview.MaterialTextView
