--- a/app/src/main/res/layout/activity_order_add.xml
+++ b/app/src/main/res/layout/activity_order_add.xml
@@ -111,12 +111,14 @@
                         app:errorEnabled="true">
 
                         <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/etDateTime"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:onClick="@{() -> orderAddViewModel.onClickEtDateTime(etDateTime, context)}"
                             android:text="@={orderAddViewModel.deliveryDate}"
-                            android:inputType="date|datetime"
+                            android:inputType="none"
+                            android:focusable="false"
                             android:lines="1" />
-
                     </com.google.android.material.textfield.TextInputLayout>
 
                     <com.google.android.material.textfield.TextInputLayout
@@ -124,20 +126,20 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="4dp"
-                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                         android:hint="Estado"
                         app:startIconDrawable="@drawable/ic_baseline_gps_fixed_24"
-                        app:endIconMode="clear_text"
                         app:errorEnabled="true">
 
-                        <com.google.android.material.textfield.TextInputEditText
+                        <AutoCompleteTextView
+                            android:id="@+id/clientStateAutoComplete"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="@={orderAddViewModel.state}"
-                            android:inputType="text"
-                            android:lines="1" />
-
+                            android:inputType="none"
+                            android:lines="1"/>
                     </com.google.android.material.textfield.TextInputLayout>
+
 
                 </androidx.appcompat.widget.LinearLayoutCompat>
 
