La sección de pedidos fue corregida y funciona perfectamente.
- Ahora se puede buscar pedidos por fecha.
- El resumen de los pedidos ya se visualiza correctamente.
- Se está contemplando la cantidad de un producto a la hora crear un pedido.
- Uso de drop down box para los estados de los pedidos.
- Uso de dialog para establecer la fecha y hora de los pedidos.

--- a/app/src/main/res/layout/activity_order_add_summary.xml
+++ b/app/src/main/res/layout/activity_order_add_summary.xml
@@ -80,10 +80,10 @@
                 android:layout_weight="5">
 
                 <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/tvClient"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     tools:text="Ernesto"
-                    android:text="@{orderAddSummaryViewModel.clientById.name}"
                     android:textSize="20sp" />
 
                 <com.google.android.material.textview.MaterialTextView
