--- a/app/src/main/res/layout/template_order_products.xml
+++ b/app/src/main/res/layout/template_order_products.xml
@@ -42,7 +42,7 @@
 
         <com.google.android.material.card.MaterialCardView
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:backgroundTint="@color/colorPrimary"
             android:layout_weight="2"
             android:layout_margin="4dp"
@@ -53,6 +53,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:padding="8dp"
+                android:gravity="center"
                 tools:text="#"
                 android:text="@{orderDetailsViewModel.order.productsQuantity.get(position).toString()}"
                 android:textSize="20sp"
@@ -62,7 +63,7 @@
 
         <com.google.android.material.card.MaterialCardView
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:backgroundTint="@color/colorAccent"
             android:layout_weight="2"
             android:layout_margin="4dp"
@@ -71,7 +72,8 @@
 
             <com.google.android.material.textview.MaterialTextView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center"
                 android:padding="8dp"
                 tools:text="S/"
                 android:text='@{"S/" + (orderDetailsViewModel.getProductAt(position).price * orderDetailsViewModel.order.productsQuantity.get(position))}'
