--- a/app/src/main/res/layout/template_order_products_add.xml
+++ b/app/src/main/res/layout/template_order_products_add.xml
@@ -23,6 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center|end"
+            android:checked="@{orderAddViewModel.isProductChecked(position)}"
             android:onClick="@{() -> orderAddViewModel.onClickListenerCheckBox(position, productQuantity)}"/>
 
         <com.google.android.material.card.MaterialCardView
@@ -68,7 +69,7 @@
                     android:layout_height="wrap_content"
                     android:background="@color/colorPrimary"
                     android:textColor="@color/white"
-                    android:text="1"
+                    android:text='@{orderAddViewModel.getProductQuantity(position).toString() ?? "1"}'
                     android:inputType="number"
                     android:lines="1" />
 
