--- a/app/src/main/res/layout/activity_client_details.xml
+++ b/app/src/main/res/layout/activity_client_details.xml
@@ -100,8 +100,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
-                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
-                <!--app:setAdapter="@{}"-->
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    app:setAdapter="@{clientDetailsViewModel.recyclerClientsAdapter}"/>
 
             </androidx.appcompat.widget.LinearLayoutCompat>
 
